// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components RegistrationForm renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
  >
    <label
      className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
      data-shrink={true}
      htmlFor="firstname"
    >
      <span>
        Vorname
      </span>
      <span
        className="MuiFormLabel-asterisk-19"
      >
         *
      </span>
    </label>
    <div
      className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
      data-cy="firstname"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={true}
        className="MuiInputBase-input-43 MuiInput-input-28"
        disabled={false}
        id="firstname"
        name="firstname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="Max"
      />
    </div>
  </div>
  <div
    className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
  >
    <label
      className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
      data-shrink={true}
      htmlFor="lastname"
    >
      <span>
        Nachname
      </span>
      <span
        className="MuiFormLabel-asterisk-19"
      >
         *
      </span>
    </label>
    <div
      className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
      data-cy="lastname"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        className="MuiInputBase-input-43 MuiInput-input-28"
        disabled={false}
        id="lastname"
        name="lastname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="Muster"
      />
    </div>
  </div>
  <div
    className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
  >
    <label
      className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
      data-shrink={true}
      htmlFor="email"
    >
      <span>
        E-Mail
      </span>
      <span
        className="MuiFormLabel-asterisk-19"
      >
         *
      </span>
    </label>
    <div
      className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
      data-cy="email"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        className="MuiInputBase-input-43 MuiInput-input-28 MuiInputBase-inputType-46 MuiInput-inputType-31"
        disabled={false}
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="email"
        value="test@example.com"
      />
    </div>
  </div>
  <div
    className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
  >
    <label
      className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
      data-shrink={true}
      htmlFor="password"
    >
      <span>
        Passwort
      </span>
      <span
        className="MuiFormLabel-asterisk-19"
      >
         *
      </span>
    </label>
    <div
      className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
      data-cy="password"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        className="MuiInputBase-input-43 MuiInput-input-28 MuiInputBase-inputType-46 MuiInput-inputType-31"
        disabled={false}
        id="password"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="password"
        value="mypassword"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-76 MuiButton-root-50 MuiButton-contained-61 MuiButton-containedPrimary-62 MuiButton-raised-64 MuiButton-raisedPrimary-65 MuiButton-fullWidth-75"
    data-cy="submit"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="submit"
  >
    <span
      className="MuiButton-label-51"
    >
      <span>
        Registrieren
      </span>
    </span>
    <span
      className="MuiTouchRipple-root-79"
    />
  </button>
</form>
`;

exports[`components RegistrationForm renders error message if registration failed 1`] = `
Array [
  <p
    className="MuiTypography-root-86 MuiTypography-body1-95 RegistrationForm-failureMessage-1"
  >
    <span>
      Die Registrierung ist fehlgeschlagen.
    </span>
  </p>,
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
        data-shrink={true}
        htmlFor="firstname"
      >
        <span>
          Vorname
        </span>
        <span
          className="MuiFormLabel-asterisk-19"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
        data-cy="firstname"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={true}
          className="MuiInputBase-input-43 MuiInput-input-28"
          disabled={false}
          id="firstname"
          name="firstname"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value="Max"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
        data-shrink={true}
        htmlFor="lastname"
      >
        <span>
          Nachname
        </span>
        <span
          className="MuiFormLabel-asterisk-19"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
        data-cy="lastname"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-43 MuiInput-input-28"
          disabled={false}
          id="lastname"
          name="lastname"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value="Muster"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        className="MuiFormLabel-root-13 MuiFormLabel-filled-17 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10 MuiInputLabel-shrink-9"
        data-shrink={true}
        htmlFor="email"
      >
        <span>
          E-Mail
        </span>
        <span
          className="MuiFormLabel-asterisk-19"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
        data-cy="email"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-43 MuiInput-input-28 MuiInputBase-inputType-46 MuiInput-inputType-31"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="email"
          value="test@example.com"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-2 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
    >
      <label
        className="MuiFormLabel-root-13 MuiFormLabel-required-18 MuiInputLabel-root-6 MuiInputLabel-formControl-7 MuiInputLabel-animated-10"
        data-shrink={false}
        htmlFor="password"
      >
        <span>
          Passwort
        </span>
        <span
          className="MuiFormLabel-asterisk-19"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-33 MuiInput-root-20 MuiInput-underline-24 MuiInputBase-formControl-34 MuiInput-formControl-21"
        data-cy="password"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input-43 MuiInput-input-28 MuiInputBase-inputType-46 MuiInput-inputType-31"
          disabled={false}
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-76 MuiButton-root-50 MuiButton-contained-61 MuiButton-containedPrimary-62 MuiButton-raised-64 MuiButton-raisedPrimary-65 MuiButton-fullWidth-75"
      data-cy="submit"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-51"
      >
        <span>
          Registrieren
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </form>,
]
`;
